Bug 478673: generify code